@@ -1,0 +1,59 @@
+#!/usr/bin/python
+# -*- coding: utf-8 -*-
+# xxx
+#
+
+# Copyright (c) 2017 Wintermute0110 <wintermute0110@gmail.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# --- Python standard library ---
+from __future__ import unicode_literals
+import sys, os, pprint
+
+def fs_compress_item_list(item_list):
+    reduced_list = []
+    num_items = len(item_list)
+    if num_items == 0 or num_items == 1: return item_list
+    previous_item = item_list[0]
+    item_count = 1
+    for i in range(1, num_items):
+        current_item = item_list[i]
+        # print('{0} | item_count {1} | previous_item "{2:>8}" | current_item "{3:>8}"'.format(i, item_count, previous_item, current_item))
+        if current_item == previous_item:
+            item_count += 1
+        else:
+            if item_count == 1: reduced_list.append('{0}'.format(previous_item))
+            else:               reduced_list.append('{0} x {1}'.format(item_count, previous_item))
+            item_count = 1
+            previous_item = current_item
+        # >> Last elemnt of the list
+        if i == num_items - 1:
+            if current_item == previous_item:
+                if item_count == 1: reduced_list.append('{0}'.format(current_item))
+                else:               reduced_list.append('{0} x {1}'.format(item_count, current_item))
+            else:
+               reduced_list.append('{0}'.format(current_item))
+
+    return reduced_list
+
+# --- Main ----------------------------------------------------------------------------------------
+input_list_list = [
+    ['dial'],
+    ['dial', 'dial'],
+    ['dial', 'dial', 'joy'],
+    ['joy', 'dial', 'dial'],
+    ['dial', 'dial', 'joy', 'joy'],
+]
+
+for input_list in input_list_list:
+    print('Input  --> {0}'.format(pprint.pformat(input_list)))
+    print('Output --> {0}'.format(pprint.pformat(fs_compress_item_list(input_list))))
+    print(' ')
